# ecommerce-fastapi

./: .env.example  .gitignore  README.md  pyproject.toml
app/: config.py  database.py  main.py  seed.py
app/api/: dependencies.py
app/api/v1/: __init__.py  auth.py  cart.py  orders.py  products.py  users.py  webhooks.py
app/core/: security.py
app/models/: cart.py  order.py  product.py  user.py
app/schemas/: cart.py  order.py  product.py  user.py
app/services/: payment.py
tests/: conftest.py  test_auth.py  test_cart.py  test_order.py  test_products.py  test_users.py
