[project]
name = "ecommerce-fastapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.120.2",
    "pydantic-settings>=2.11.0",
    "python-dotenv>=1.2.1",
    "ruff>=0.14.2",
    "sqlmodel>=0.0.27",
]
