[project]
name = "ecommerce-fastapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "bcrypt>=5.0.0",
    "fastapi[standard]>=0.120.2",
    "pydantic-settings>=2.11.0",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.2.1",
    "ruff>=0.14.2",
    "sqlmodel>=0.0.27",
    "stripe>=13.1.1",
]
